--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ font-family: 'Freehand', cursive; */
 }
 .container
 {
-    background: url(/images/bg1.jpg);
+    background: url(images/bg1.jpg);
     background: no-repeat center ;
     background-size: cover;
 }
