--- a/style.css
+++ b/style.css
@@ -124,12 +124,16 @@ nav ul li
     justify-content: center;
     flex-direction: column-reverse;
 }
-@media screen and(max-width:678px)
+@media screen and(max-width:768px)
 {
     .info
     {
-        font-size: 30px;
+        font-size: 20px;
         font-weight: 600;
+    }
+    .details
+    {
+        padding-top: 3px;
     }
 }
 
